LIST OF CHANGES

release 101.4.0 (2024-08-30)
 - Added species_from_reference_genome method to st::api::lims. If the
   reference_genome value is defined, this new method returns the name of the
   species. parse_reference_genome from npg_tracking::data::reference::find
   is used for parsing the reference genome string.

release 101.3.0 (2024-08-05)
 - Provided a direct access to the default section of the study configuration
   file.
 - Enhanced a textual listing of instruments
   Added a column for recently used staging servers so that the loaders can
   easily spot instruments, which write to the same server.
 - Update documentation for tags
 - docs
   - Automatic confluence update for 'docs/api_usage.md',
     'docs/instruments.md', 'docs/run_states.md', 'docs/user_management.md',
     'docs/tag_semantics.md'

release 101.2.0 (2024-05-24)
 - remove dependency on HTML::Tidy
 - update NovaSeqX icon
 - Added a footer to the tracking run web page.

release 101.1.0
 - Deleted npg_tracking::illumina::run::short_info and
   npg_tracking::illumina::run::locations, their functionality is moved to
   npg_tracking::illumina::run::folder.
 - Moved a build method for the run_folder attribute from
   npg_tracking::illumina::run_folder to npg_tracking::illumina::run::folder.
 - Preparation for the deletion of unused instrument_utilisation table from
   the tracking db schema:
   - dropped instrument_utilisation table from the db schema, which is used
     for testing the tracking web application,
   - suppressed generation of the DBIx ORM class for this table and deleted
     the class.
 - Added an option to exclude lanes from a merge (see st::api::lims
   aggregate_libraries method).
 - Extended the basic search functionality of the tracking web application by
   enabling a search for lane annotations.

release 101.0.0
 - npg_tracking::illumina::run::short_info
     - Stopped parsing out run details from the run folder name. Deleted