@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 52;
+use Test::More tests => 44;
 use Test::Exception;
 use File::Spec::Functions qw(catfile);
 use Cwd qw(cwd);
@@ -204,20 +204,7 @@ use_ok('npg_tracking::data::reference::find');
 }
 
 {
-  no warnings 'uninitialized';
   my $ruser = Moose::Meta::Class->create_anon_class(
-      roles => [qw/npg_tracking::data::reference::find/])
-      ->new_object({ repository => $transcriptome_repos });
-  is(join(q[|],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome)])),'Homo_sapiens|1000Genomes_hs37d5|ensembl_74_transcriptome|','transcriptome ref genome parsing ok with correct format');
-  is(join(q[|],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome) [star]])),'Homo_sapiens|1000Genomes_hs37d5|ensembl_74_transcriptome|star','transcriptome ref genome parsing ok with aligner 1/2');
-  is(join(q[|],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5) [star]])),q[Homo_sapiens|1000Genomes_hs37d5||star],'transcriptome ref genome parsing ok with aligner 2/2');
-  is(join(q[|],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5)])),q[Homo_sapiens|1000Genomes_hs37d5],'transcriptome ref genome parsing ok without aligner');
-  is(join(q[|],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + )])), q[],'transcriptome ref genome parsing ok - returns empty with missing transcriptome version');
-  is(join(q[|],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 ensembl_74_transcriptome)])),q[],'transcriptome ref genome parsing ok - returns empty with missing delimiter');
-  is(join(q[|],$ruser->parse_reference_genome(q[Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome])),q[],'transcriptome ref genome parsing ok - returns empty with missing bracket');
-  is(join(q[|],$ruser->parse_reference_genome(q(Homo_sapiens (1000Genomes_hs37d5 + ensembl_74_transcriptome) [star))),'Homo_sapiens|1000Genomes_hs37d5|ensembl_74_transcriptome|','transcriptome ref genome parsing ok - aligner ignored with missing square bracket');
-
-  $ruser = Moose::Meta::Class->create_anon_class(
           roles => [qw/npg_tracking::data::reference::find/])
           ->new_object({ 'repository' => $transcriptome_repos, 'aligner' => 'fasta' });
   my $lims = Test::MockObject->new();
